--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
