--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/cli": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
